--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,16 @@
     width: 200px;
     border: 5px solid rgb(87, 87, 87);
 }
+
+hr {
+    width: 250px;
+    border-top: 4px solid #666;
+}
+
+section {
+    min-height: 600px;
+}
+
+.portofolio {
+    background-color: #eee;
+}
