--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+html {
+    position: relative;
+}
+
+body {
+    margin-bottom: 100px;
+}
+
 .jumbotron img {
     width: 200px;
     border: 5px solid rgb(87, 87, 87);
@@ -14,4 +22,19 @@ section {
 
 .portofolio {
     background-color: #eee;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    height: 100px;
+    background-color: rgb(87, 87, 87);
+    color: #999;
+    padding-top: 30px;
+}
+
+footer p {
+    color: #aaa;
+    font-size: 1em;
 }
